# slurmcli

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: slurmhud-release.yml
Formula/: slurmhud.rb
macos/SlurmHUD/: Makefile  README.md  build.sh  project.yml
macos/SlurmHUD/SlurmHUD.xcodeproj/: project.pbxproj
macos/SlurmHUD/SlurmHUD.xcodeproj/project.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
macos/SlurmHUD/SlurmHUD.xcodeproj/project.xcworkspace/xcuserdata/jan.xcuserdatad/: UserInterfaceState.xcuserstate
macos/SlurmHUD/SlurmHUD.xcodeproj/xcshareddata/xcschemes/: SlurmHUD.xcscheme  SlurmHUDWidget.xcscheme
macos/SlurmHUD/SlurmHUD.xcodeproj/xcuserdata/jan.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/SlurmHUD/Sources/Shared/: Config.swift  Helpers.swift  MockClusterData.swift  Models.swift  NotificationManager.swift  SSHRunner.swift  StatusFetcher.swift  WatchStore.swift
macos/SlurmHUD/Sources/SlurmHUDApp/: AppIcon.icns  BackgroundRefreshAgent.swift  Info.plist  RefreshCacheCommand.swift  SettingsView.swift  SlurmHUD.entitlements  SlurmHUDApp.swift  StatusView.swift
macos/SlurmHUD/Sources/SlurmHUDWidget/: Info.plist  SlurmHUDWidget.entitlements  SlurmHUDWidget.swift
macos/SlurmHUD/codesign/: app.entitlements  widget.entitlements
slurmcli/: __init__.py  cluster_status.py  hud.py  launch_slurm.py  run_slurm.py  slurm_parser.py  status_cli.py
